theme: just-the-docs

--- a/shines/b4.md
+++ b/shines/b4.md
@@ -1,4 +1,8 @@
-# Bianco 4
+---
+layout: default
+title: Bianco 4
+nav_order: 3
+---
 
 [Strat Timing](https://docs.google.com/spreadsheets/d/1h4ocgbBk-i4n7x6dMlERhfdKe1PrG7j1AOAIJ6zGjcw/edit#gid=598168778)  
 
