--- a/shines/bianco/b4.md
+++ b/shines/bianco/b4.md
@@ -1,8 +1,11 @@
 ---
 layout: default
 title: Bianco 4
-nav_order: 3
+grand_parent: Shines
+parent: Bianco
+nav_order: 4
 ---
+# Bianco 4
 
 [Strat Timing](https://docs.google.com/spreadsheets/d/1h4ocgbBk-i4n7x6dMlERhfdKe1PrG7j1AOAIJ6zGjcw/edit#gid=598168778)  
 
