--- a/shines/b4.md
+++ b/shines/b4.md
@@ -1,9 +1,8 @@
 ---
 layout: default
 title: Bianco 4
-grand_parent: Shines
-parent: Bianco
-nav_order: 4
+parent: Shines
+nav_order: 2
 ---
 # Bianco 4
 
