--- a/shines/r4.md
+++ b/shines/r4.md
@@ -22,7 +22,7 @@ This strat is **3s slower** than the fastest possible strat, with times of 33.15
 7. **11.40**: To set up the triple-jump dive, first redive once (press B during a dive) on the 4th rod, then (long) rollout onto the flat platfrom. If you're really far back, an additional redive helps. Then once on the flat platform, carefully adjust how long you hold A by feel on each jump, to hit the last jump fairly close to the end. It can be a bit tricky since you preserve more speed the earlier you press A to jump after Mario lands each time, as well as with A-press duration. Also, wiggle the stick up-right while airborne if necessary, to get as far right as you can for the triple-jump dive.
 8. **14.50**: Turn the camera a bit left (C-stick right), then short-rollout onto the cog, spin-jump-dive (sjd), then (long-) rollout, then sjd again. The only tricky thing is feeling out the situational spin-buffer timing, different for each sjd. Remember that you must do the entire spin within 10f of pressing A to spin-jump (with B to sjd in these cases).
 9. **20.00**: Press B to redive on the (6th) rod, then wait a bit to sandbag here. How long you wait depends on where you are in the cycle – the earlier you are, the longer you wait – which you feel out by grinding attempts and looking at if your landing on the big rod later on is safe or if you're too early.
-10. **20.75**: Rollout, then jump-dive with up-right stick. Turn the camera, do a medium rollout, jump-dive over the peg, and another medium rollout to set up the big spin-jump-dive. The details here vary depending on your cycle and positioning, so get a feel for different movements on this rod.
+10. **20.75**: Rollout, then jump-dive with up-right stick. Wait a few frames for Mario to be running after the rollout to ensure you jump-dive in the right direction. Turn the camera, do a medium rollout, jump-dive over the peg, and another medium rollout to set up the big spin-jump-dive. The details here vary depending on your cycle and positioning, so get a feel for different movements on this rod.
 11. **25.00**: For the sjd onto the big rod, there's some strategy involved. You need to rollout into a sprint by pressing A, but that's less lenient the more vertical the big rod is when you hit it. It's less vertical the later you are on the cycle, and the further right your line is on the sjd (going right is also faster but too far right means the jump doesn't reach). If you go left, you can [back up a failed rollout with the red peg](https://clips.twitch.tv/CrispyPerfectPlumberSquadGoals).
-12. **27.00**: After the rollout, run up, then up-right, then up, until behind the big yellow peg. Now, jump-dive onto the last rod, turning the camera towards the shine before or after the jump-dive (or both). If this jump-dive is too precise for you, consider stopping the sprint when the big rod is fairly flat, then going for an unbuffered sjd.
+12. **27.00**: After the rollout, run up, then up-right, then up, until behind the big yellow peg (optimally, if your sjd was very right, you can fluidly run in a straight line here, but it's risky). Now, jump-dive onto the last rod, turning the camera towards the shine before or after the jump-dive (or both). If this jump-dive is too precise for you, consider stopping the sprint when the big rod is fairly flat, then going for an unbuffered sjd.
 13. **30.00**: The last rod movement is a bit precise. Short-rollout holding up-left, then do a big jump and late dive to get over the turning rod. Then rollout and jump-dive into the shine. Shortening the jump saves time but gets less clearance, so is riskier.
