--- a/_game/shines/b3.md
+++ b/_game/shines/b3.md
@@ -13,6 +13,8 @@ nav_order: 6
 - Cliff Wall Kick
 ### Intermediate
 - Pole Wall Kick
+
+{% include yt.html id="tglJP5itMAU" %}
 ### Expert
 - One-Slide
 
