--- a/_game/shines/b3.md
+++ b/_game/shines/b3.md
@@ -6,24 +6,20 @@ parent: Shines
 nav_order: 6
 ---
 # Bianco 3
-
+Bianco 3 is made up of two parts: the Entry and the Secret.
 ## Entry
-
+Both the Beginner and Advanced strats utilize a majority of the same movement. The one difference will be called out in the Advanced section.
 ### Beginner
-- Cliff Wall Kick
-
-need vid
-### Intermediate
 - Pole Wall Kick
-
+Hold up and hoverslide from the start
 {% include yt.html id="tglJP5itMAU" %}
-### Expert
+### Advanced
 - One-Slide
 
 {% include yt.html id="5yFxfopfdI0" %}
 ## Secret
 
-### Beginner/Intermediate
+### Beginner
 - Triple Jump Dive
 
 {% include yt.html id="U0i6C8VO50k" %}
