--- a/_game/shines/b3.md
+++ b/_game/shines/b3.md
@@ -10,11 +10,21 @@ Bianco 3 is made up of two parts: the Entry and the Secret.
 ## Entry
 Both the Beginner and Advanced strats utilize a majority of the same movement. The one difference will be called out in the Advanced section.
 ### Beginner
-- Pole Wall Kick
-Hold up and hoverslide from the start
+#### Pole Wall Kick
+- From the start, hold up and hoverslide
+- Aim towards roughly the middle of the log and buffer a hover by holding R
+- Briefly hover when Mario slides off the path and double jump off the log
+- Depending on the speed retained from the double jump, you may need to dive rollout to reach the doorway
+- Dive through the doorway, rollout, then jump and spray up the path. Dive into the water left on the path
+- Slide to the water, rollout onto the first log, jump dive to the second log
+- Rollout onto the land, dive rollout up the small hill to position yourself to the right of the pole
+- Spin jump or sideflip into the pole to begin the wall kick
+- Aim to the [right side of the pole](https://cdn.discordapp.com/attachments/941086197885833266/1029200667119730708/unknown.png) as Mario can only wall kick off the right side.
+- Hover up to the cliff, dive rollout into the steep section while holding R to buffer a hover
+- Hover up the steep section, then jump dive and rollout into the secret
 {% include yt.html id="tglJP5itMAU" %}
 ### Advanced
-- One-Slide
+#### One-Slide
 
 {% include yt.html id="5yFxfopfdI0" %}
 ## Secret
