--- a/_game/shines/b3.md
+++ b/_game/shines/b3.md
@@ -6,7 +6,7 @@ parent: Shines
 nav_order: 6
 ---
 # Bianco 3
-Bianco 3 is made up of two parts: the Entry and the Secret.
+Bianco 3 is made up of two parts: the Entry and the Secret. You should be comfortable with hoverslides, (jump) dive rollouts, spin jumps, sideflips, and triple jumps to have success with this shine.
 ## Entry
 Both the Beginner and Advanced strats utilize a majority of the same movement. The one difference will be called out in the Advanced section.
 ### Beginner
@@ -25,15 +25,25 @@ Both the Beginner and Advanced strats utilize a majority of the same movement. T
 {% include yt.html id="tglJP5itMAU" %}
 ### Advanced
 #### One-Slide
-
+This strat differs from the beginner strat in how Mario passes through the doorway. Instead of a dive/rollout and jump/spray into dive, the entire sequence can be accomplished with a well-positioned and well-timed hoverslide. See timestampe 0:14 of the video below for where to begin the hoverslide.
 {% include yt.html id="5yFxfopfdI0" %}
 ## Secret
 
 ### Beginner
-- Triple Jump Dive
-
+#### Triple Jump Dive
+- Run forward briefly then begin a triple jump sequence
+- Triple jump dive up to the fourth moving block and rollout onto the fifth block
+- Spin jump dive up to the orange blocks, rollout to the center block, adjusting left if necessary
+- Jump dive onto the last orange block and rollout, adjusting right to avoid boinking the nail
+- The green path consists of a jumpdive/rollout and dive/rollout. One of the rollouts needs to be a short rollout for proper spacing
+- Dive rollout onto the first star, rollout to the second, then rollout and jump dive to the shine
 {% include yt.html id="U0i6C8VO50k" %}
 ### Advanced
-- Jump Dive
-
+#### Jump Dive
+- Jump dive as soon as mario lands and hold left. Do a short rollout to the edge of the first block
+- Jump up/right to the second block and spin jump dive to the fourth block
+- Spin jump dive up to the orange blocks and rollout to the middle block
+- If fast enough, you can dive onto the 3rd orange block as it's lowering (like the video below). As a backup, you can jump dive over it instead.
+- If you dove to the 3rd orange block, rollout up to the orange block
+- Perform dive rollouts across the green path, then finish the same as the beginner strat
 {% include yt.html id="gGP4RSuPUvc" %}
