--- a/_game/shines/b3.md
+++ b/_game/shines/b3.md
@@ -8,7 +8,7 @@ nav_order: 6
 # Bianco 3
 Bianco 3 is made up of two parts: the Entry and the Secret. You should be comfortable with hoverslides, (jump) dive rollouts, spin jumps, sideflips, and triple jumps to have success with this shine.
 ## Entry
-Both the Beginner and Advanced strats utilize a majority of the same movement. The one difference will be called out in the Advanced section.
+Both the Beginner and Advanced Entry strats utilize a majority of the same movement. The one difference will be called out in the Advanced section.
 ### Beginner
 #### Pole Wall Kick
 - From the start, hold up and hoverslide
@@ -22,6 +22,7 @@ Both the Beginner and Advanced strats utilize a majority of the same movement. T
 - Aim to the [right side of the pole](https://cdn.discordapp.com/attachments/941086197885833266/1029200667119730708/unknown.png) as Mario can only wall kick off the right side.
 - Hover up to the cliff, dive rollout into the steep section while holding R to buffer a hover
 - Hover up the steep section, then jump dive and rollout into the secret
+If you struggle with the Pole Wall Kick, you can spin jump into the cliff wall, then wall kick and hover to the cliff instead.
 {% include yt.html id="tglJP5itMAU" %}
 ### Advanced
 #### One-Slide
