--- a/_game/shines/b4.md
+++ b/_game/shines/b4.md
@@ -9,8 +9,8 @@ nav_order: 7
 Bianco 4 is a red coin shine which requires collecting 8 red coins for the shine to spawn. You should be comfortable with hoverslides, (jump) dive rollouts, (buffered) spin jumps, sideflips, and triple jumps to have success with this shine. The intermediate and advanced strats for this level require knowledge of glitchy wall kick hovers (GWKHs) and insta-momentum spin jumps.
 ### Beginner
 #### Triple Jump Y-Turn
--From the start, hold up and hoverslide
--Aim towards the end of the log and buffer a hover as Mario slides off the path
+- From the start, hold up and hoverslide
+- Aim towards the end of the log and buffer a hover as Mario slides off the path
 - Hover briefly, then perform a small double jump off the log
 - Triple jump y-turn off the grass by tapping A+Y together. You may roll your thumb from A to Y to ensure this is done properly
 - Hold right during the y-turn then hover to the right of the bump in the wall
@@ -29,3 +29,19 @@ Bianco 4 is a red coin shine which requires collecting 8 red coins for the shine
 
 If you struggle with the insta-momentum spin after the 7th coin, you can hover to the roof without diving and perform a normal spin jump to the right.
 {% include yt.html id="9p2UxRJvDaU" %}
+### Intermediate
+The Intermediate strat adds the grass-slide at the start of the level and a glitchy wall-kick hover at the end, which combined can save 1.0-1.5 seconds.
+#### Grass-Slide
+- At the start of the level, turn the camera slightly to the right, then hold up and hoverslide
+- Aim the hoverslide for this section of the grass, the last part which is not raised above the path
+- Slide onto the grass, then aim for this spot where the grass wall dips back slightly
+- Buffer a hover and slide off the grass wall. Holding up-right, briefly hover back towards this spot on the grass
+- As Mario lands back on the grass, spin jump towards the white wall and hover onto it
+- Hoverslide to the bump on the white wall then continue the level following the Beginner strat
+#### Glitchy Wall-Kick Hover
+- Upon landing on the middle section of the final building, spin jump towards the left pillar
+- GWKH by first rolling your thumb from Y to A to GWK onto the roof of the pillar
+- Finish the GWKH by briefly hovering after performing the GWK. The hover must come at least 1-2 frames after the GWK, otherwise you will do a regular wall kick with y-cam storage instead of a GWKH, which looks like this.
+- If you do a regular wall kick following an attempted GWKH, hover backwards onto the left pillar. Tap L while hovering to remove the y-cam storage that would otherwise occur when Mario lands.
+- Finish the level the same as the Beginner strat
+{% include yt.html id="nIY431bQL-w" %}
