--- a/_game/shines/b4.md
+++ b/_game/shines/b4.md
@@ -38,6 +38,7 @@ The Intermediate strat adds the grass-slide at the start of the level and a glit
 - Buffer a hover and slide off the grass wall. Holding up-right, briefly hover back towards this spot on the grass
 - As Mario lands back on the grass, spin jump towards the white wall and hover onto it
 - Hoverslide to the bump on the white wall then continue the level following the Beginner strat
+
 #### Glitchy Wall-Kick Hover
 - Upon landing on the middle section of the final building, spin jump towards the left pillar
 - GWKH by first rolling your thumb from Y to A to GWK onto the roof of the pillar
@@ -45,3 +46,11 @@ The Intermediate strat adds the grass-slide at the start of the level and a glit
 - If you do a regular wall kick following an attempted GWKH, hover backwards onto the left pillar. Tap L while hovering to remove the y-cam storage that would otherwise occur when Mario lands.
 - Finish the level the same as the Beginner strat
 {% include yt.html id="nIY431bQL-w" %}
+### Advanced
+The Advanced strat, known as Rope Speedspin, adds an insta-momentum spin jump off the final roof before the last rope, which can save up to 1.64 seconds, but comes with the risk of rolling out off the roof.
+#### Rope Speedspin
+- After collecting the 8th red coin, jump dive into the roof of the right pillar, aiming for this spot on the roof
+- Perform an insta-momentum spin to the right, following the path of the rope
+- Briefly hover to exit the spin and fall onto the rope
+- Jump dive off the rope, ground pound just before landing back on it, then jump dive off it again into the shine
+{% include yt.html id="l4zSP-_iC2g" %}
