--- a/_game/shines/b4.md
+++ b/_game/shines/b4.md
@@ -33,7 +33,7 @@ If you struggle with the insta-momentum spin after the 7th coin, you can hover t
 The Intermediate strat adds the grass-slide at the start of the level and a glitchy wall-kick hover at the end, which combined can save 1.0-1.5 seconds.
 #### Grass-Slide
 - At the start of the level, turn the camera slightly to the right, then hold up and hoverslide
-- Aim the hoverslide for <img src="https://cdn.discordapp.com/attachments/941086197885833266/1029523937354321920/unknown.png" onmouseover="this.src='https://cdn.discordapp.com/attachments/941086197885833266/1029525212586332210/unknown.png'" onmouseout="this.src='https://cdn.discordapp.com/attachments/941086197885833266/1029523937354321920/unknown.png'" /> [this section of the grass](https://cdn.discordapp.com/attachments/941086197885833266/1029523937354321920/unknown.png), the last part which is not raised above the path
+- Aim the hoverslide for <img src="https://cdn.discordapp.com/attachments/941086197885833266/1029928641964036106/unknown.png" onmouseover="this.src='https://cdn.discordapp.com/attachments/941086197885833266/1029525212586332210/unknown.png'" onmouseout="this.src='https://cdn.discordapp.com/attachments/941086197885833266/1029928641964036106/unknown.png'" /> section of the grass, the last part which is not raised above the path
 - Slide onto the grass, then aim for [this spot](https://cdn.discordapp.com/attachments/941086197885833266/1029524942812876900/unknown.png) where the grass wall dips back slightly
 - Buffer a hover and slide off the grass wall. Holding up-right, briefly hover back towards this spot on the grass
 - As Mario lands back on the grass, spin jump towards the white wall and hover onto it
