--- a/_game/shines/ricco/r4.md
+++ b/_game/shines/ricco/r4.md
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Ricco 4
-permalink: /shines/r4/
-parent: Shines
-nav_order: 4
+permalink: /shines/ricco/episode4
+parent: Ricco
+grand_parent: Shines
 ---
 # Ricco 4 (Secret: Basic Strat)
 
