--- a/_community/wrhistory/120.md
+++ b/_community/wrhistory/120.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 120 Shines History
+title: 120 Shines
 permalink: /wrhistory/120shines/
 parent: WR History
 nav_order: 2
