--- a/_community/wrhistory/96.md
+++ b/_community/wrhistory/96.md
@@ -22,13 +22,11 @@ nav_order: 3
 **[2:46:03](https://twitch.tv/videos/41727326)** by AverageTrey on January 31, 2015  
 **[2:45:36](https://nicovideo.jp/user/10045073/mylist/49351296)** by toobou on March 23, 2015  
 **[2:44:26](https://twitch.tv/videos/40719436)** by AverageTrey on April 7, 2015  
-**[2:43:34](https://twitch.tv/videos/16837446)** by AverageTrey on September 19, 2015  
-[Part 2](https://www.twitch.tv/videos/16837648)  
+**[2:43:34](https://twitch.tv/videos/16837446)** by AverageTrey on September 19, 2015 [Part 2](https://www.twitch.tv/videos/16837648)  
 
 ### 2016
 **[2:43:06](https://twitch.tv/videos/37872365)** by bounceyboy on January 26, 2016  
-**[2:41:30](https://youtu.be/aAdwxiitVcE)** by shadowmario27 on June 11, 2016  
-[Part 2](https://youtu.be/JlwjVIA3_2g)  
+**[2:41:30](https://youtu.be/aAdwxiitVcE)** by shadowmario27 on June 11, 2016 [Part 2](https://youtu.be/JlwjVIA3_2g)  
 
 ### 2017
 **[2:39:38](https://youtu.be/JXeuQk41uf4)** by Levaten on January 26, 2017  
