--- a/_community/wrhistory/120.md
+++ b/_community/wrhistory/120.md
@@ -39,7 +39,7 @@ nav_order: 2
 **[3:29:12](https://www.youtube.com/watch?v=RlsGoWQuvJY)** by Samura1man on August 14, 2013  
 **[3:29:12](https://www.twitch.tv/videos/45487980)** by stelzig on November 11, 2013 (tie)	  
 **[3:29:09](https://www.youtube.com/watch?v=HmbecRK64K4)** by stelzig on November 23, 2013			  
-**[3:26:35](https://www.twitch.tv/videos/45920243)** by stelzig on December 16, 2013 **[Part 2](https://www.twitch.tv/videos/45920360)**		  
+**[3:26:35](https://www.twitch.tv/videos/45920243)** by stelzig on December 16, 2013 [Part 2](https://www.twitch.tv/videos/45920360)  
 **[3:26:12](https://www.youtube.com/watch?v=iuSoNCPE-fU)** by Samura1man on December 21, 2013  
   
 ### 2014	  
