--- a/_community/wrhistory/120.md
+++ b/_community/wrhistory/120.md
@@ -129,4 +129,7 @@ Times above on Reset Timing, Times below on File Select timing
 
 ### 2025  
 **[2:51:14](https://www.youtube.com/watch?v=v76CqZHYFCQ)** by SB_runs on January 6, 2025  
-
+**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by SB_runs on May 22, 2025  
+**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by SB_runs on May 22, 2025  
+**[2:51:02](https://www.youtube.com/watch?v=7n4mnqvGG4o)** by akane174 on September 18, 2025  
+**[2:50:34](https://www.youtube.com/watch?v=-EH8YfcmZNY)** by akane174 on September 21, 2025  
