--- a/_community/wrhistory/120.md
+++ b/_community/wrhistory/120.md
@@ -108,28 +108,28 @@ Times above on Reset Timing, Times below on File Select timing
   
 ### 2021  
 **[2:54:04](https://www.youtube.com/watch?v=9I2s_6Co5VQ)** by *Anonymous* on September 30, 2021  
-**[2:53:57](https://www.youtube.com/watch?v=bOOZT3IpomE)** by SB_Runs on November 1st, 2021  
+**[2:53:57](https://www.youtube.com/watch?v=bOOZT3IpomE)** by sblectric on November 1st, 2021  
 **[2:53:42](https://www.youtube.com/watch?v=U-2tzXHBqzw)** by *Anonymous* on December 7th, 2021  
   
 ### 2022 
 **[2:53:55](https://www.youtube.com/watch?v=byuCjvEcmlc)** by ShadowMario27 on October 10, 2022  
-**[2:53:16](https://www.youtube.com/watch?v=ZDlN0Y-88A4)** by SB_runs on November 30, 2022  
+**[2:53:16](https://www.youtube.com/watch?v=ZDlN0Y-88A4)** by sblectric on November 30, 2022  
 
 ### 2023
-**[2:52:41](https://www.youtube.com/watch?v=N8cyG1M_uho)** by SB_runs on February 11, 2023  
+**[2:52:41](https://www.youtube.com/watch?v=N8cyG1M_uho)** by sblectric on February 11, 2023  
 **[2:52:36](https://www.twitch.tv/videos/1873286460?t=0h0m7s)** by Nanashi on August 16, 2023  
-**[2:52:31](https://www.youtube.com/watch?v=U7LDjVA4gWE)** by SB_runs on September 7, 2023  
-**[2:52:26](https://www.youtube.com/watch?v=UTXwA3VXGH0)** by SB_runs on September 13, 2023  
+**[2:52:31](https://www.youtube.com/watch?v=U7LDjVA4gWE)** by sblectric on September 7, 2023  
+**[2:52:26](https://www.youtube.com/watch?v=UTXwA3VXGH0)** by sblectric on September 13, 2023  
 **[2:52:24.630](https://www.twitch.tv/videos/1946543871?t=0h0m1s)** by Nanashi on October 9, 2023  
 
 ### 2024
-**[2:52:24.230](https://www.youtube.com/watch?v=O-uc-up7-B4)** by SB_runs on January 12, 2024  
+**[2:52:24.230](https://www.youtube.com/watch?v=O-uc-up7-B4)** by sblectric on January 12, 2024  
 **[2:51:34](https://www.twitch.tv/videos/2039142966?t=0h0m1s)** by Nanashi on January 21, 2024  
-**[2:51:32](https://www.youtube.com/watch?v=hhX-qBH8-eU)** by SB_runs on December 6, 2024  
+**[2:51:32](https://www.youtube.com/watch?v=hhX-qBH8-eU)** by sblectric on December 6, 2024  
 
 ### 2025  
-**[2:51:14](https://www.youtube.com/watch?v=v76CqZHYFCQ)** by SB_runs on January 6, 2025  
-**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by SB_runs on May 22, 2025  
-**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by SB_runs on May 22, 2025  
-**[2:51:02](https://www.youtube.com/watch?v=7n4mnqvGG4o)** by akane174 on September 18, 2025  
-**[2:50:34](https://www.youtube.com/watch?v=-EH8YfcmZNY)** by akane174 on September 21, 2025  
+**[2:51:14](https://www.youtube.com/watch?v=v76CqZHYFCQ)** by sblectric on January 6, 2025  
+**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by sblectric on May 22, 2025  
+**[2:51:05](https://www.youtube.com/watch?v=pWoXdWZlpd0)** by sblectric on May 22, 2025  
+**[2:51:02](https://www.youtube.com/watch?v=7n4mnqvGG4o)** by akane on September 18, 2025  
+**[2:50:34](https://www.youtube.com/watch?v=-EH8YfcmZNY)** by akane on September 21, 2025  
