--- a/_community/wrhistory/96.md
+++ b/_community/wrhistory/96.md
@@ -45,12 +45,12 @@ nav_order: 3
 **[2:34:31](https://youtu.be/i-t-OzdEY-Y)** by Nanashi745 on June 21, 2019  
 
 ### 2020
-**[2:34:03](https://youtu.be/itHNYKg23rA)** by SB on January 1, 2020  
+**[2:34:03](https://youtu.be/itHNYKg23rA)** by sblectric on January 1, 2020  
 **[2:33:42](https://twitch.tv/videos/536462871)** by SidedWilliams on January 15, 2020  
 **[2:31:38](https://youtu.be/4PVZjFsAvYw)** by Anonymous on January 16, 2020  
 
 ### 2021
-**[2:31:35](https://youtu.be/6PHIA7DiiGE)** by SB on February 28, 2021  
+**[2:31:35](https://youtu.be/6PHIA7DiiGE)** by sblectric on February 28, 2021  
 **[2:50:50](https://www.twitch.tv/videos/1144553232)** by SidedWilliams on September 10, 2021  
 **[2:30:19](https://youtu.be/33wuZFRHiWY)** by Anonymous on September 10, 2021  
 
