--- a/_community/wrhistory/96.md
+++ b/_community/wrhistory/96.md
@@ -51,8 +51,10 @@ nav_order: 3
 
 ### 2021
 **[2:31:35](https://youtu.be/6PHIA7DiiGE)** by sblectric on February 28, 2021  
-**[2:50:50](https://www.twitch.tv/videos/1144553232)** by SidedWilliams on September 10, 2021  
 **[2:30:19](https://youtu.be/33wuZFRHiWY)** by Anonymous on September 10, 2021  
 
 ### 2022
 **[2:30:11](https://twitch.tv/videos/1638757106)** by Nanashi on October 31, 2022  
+
+### 2025
+**[2:30:08](https://www.youtube.com/watch?v=dWe8MxetqAs)** by JJsrl on March 13, 2025  
