--- a/_community/wrhistory/96.md
+++ b/_community/wrhistory/96.md
@@ -58,3 +58,4 @@ nav_order: 3
 
 ### 2025
 **[2:30:08](https://www.youtube.com/watch?v=dWe8MxetqAs)** by JJsrl on March 13, 2025  
+**[2:29:37](https://www.youtube.com/watch?v=rlZkTE8e9kA)** by JJsrl on November 17, 2025  
