--- a/_community/wrhistory/79.md
+++ b/_community/wrhistory/79.md
@@ -11,9 +11,6 @@ nav_order: 6
 **2:57:49** by UrBoyGraham on July 1, 2012  
 **2:46:34** by Samura1Man on October 29, 2012  
 
-### 2013
-**No Improvements**  
-
 ### 2014
 **[2:32:30](https://www.youtube.com/watch?v=Jwq8tsGVlqE)** by stelzig on May 17, 2014  
 
@@ -44,9 +41,6 @@ nav_order: 6
 **[2:21:02](https://www.youtube.com/watch?v=2UPCxihJjWc)** by Nanashi745 on July 18, 2019  
 **[2:20:54](https://www.youtube.com/watch?v=9TJa7Qdm0Aw)** by sblectric on December 20, 2019  
 
-### 2020
-**No Improvements**  
-
 ### 2021
 **[2:20:11](https://www.youtube.com/watch?v=cyMoVBq_gXk)** by *Anonymous* on January 3, 2021  
 **[2:19:25](https://www.youtube.com/watch?v=Q8GgZW8_7sU)** by sblectric on March 2, 2021  
@@ -54,3 +48,6 @@ nav_order: 6
 
 ### 2022
 **[2:17:34](https://www.twitch.tv/videos/1599507309)** by Nanashi745 on September 23, 2022  
+
+### 2025
+**[2:16:31](https://www.youtube.com/watch?v=Y9-z2DwgD8E)** by akane on November 17, 2025  
